infra/Terraform/kubernets_setup.tf
resource "null_resource" "kube_config" {
  provisioner "local-exec" {
    command = <<EOT
aws eks --region ${var.region} update-kubeconfig --name ${aws_eks_cluster.eks_cluster.name}
kubectl config set-context --current --namespace=default
EOT
  }
}

resource "kubernetes_config_map" "fraud_demo_config" {
  metadata {
    name = "${var.webapp_name}-config" # Replace with your ConfigMap name
    namespace = "default"     # Change to desired namespace
  }

  data = {
    DB_NAME   = var.oracle_db_name
    DB_USER   = var.oracle_db_username
    DB_HOST   = aws_db_instance.oracle_db.address #
    DB_PORT   = "${var.oracle_db_port}"
    DB_PASSWORD = var.oracle_db_password
    ADMIN_USER_USERNAME = "admin"
    ADMIN_USER_EMAIL = "admin@admin.com"
    ADMIN_USER_PASSWORD = "admin"
  }
  depends_on = [aws_db_instance.oracle_db, aws_eks_cluster.eks_cluster]
}

resource "kubernetes_deployment" "fraud_demo" {
  metadata {
    name = "${var.webapp_name}"
    labels = {
      app = "${var.webapp_name}"
    }
  }

  spec {
    replicas = 1

    selector {
      match_labels = {
        app = "${var.webapp_name}"
      }
    }

    template {
      metadata {
        labels = {
          app = "${var.webapp_name}"
        }
      }

      spec {
        container {
          name  = "${var.webapp_name}"
          image = "public.ecr.aws/v3a9u0p7/demo/fraud-webapp:latest"
          image_pull_policy = "Always"
          command = [
            "/bin/sh",
            "-c"
          ]

          args = [
            <<-EOT
              python /opt/fraud_detection/manage.py makemigrations &&
              python /opt/fraud_detection/manage.py migrate &&
              python /opt/fraud_detection/manage.py collectstatic --no-input &&
              python /opt/fraud_detection/manage.py load_users &&
              python /opt/fraud_detection/manage.py create_default_super_user &&
              gunicorn -c /opt/fraud_detection/gunicorn.conf.py fraud_detection.wsgi:application
            EOT
          ]

          port {
            name           = "gunicornport"
            container_port = 8000
          }

          liveness_probe {
            http_get {
              path = "/health/"
              port = 8000
            }

            initial_delay_seconds = 3
            period_seconds        = 10
            timeout_seconds       = 2
            failure_threshold     = 5
          }

          readiness_probe {
            http_get {
              path = "/health/"
              port = 8000
            }

            initial_delay_seconds = 20
            period_seconds        = 3
            timeout_seconds       = 3
            failure_threshold     = 5
          }

          env {
            name = "DB_NAME"
            value_from {
              config_map_key_ref {
                name = kubernetes_config_map.fraud_demo_config.metadata[0].name
                key  = "DB_NAME"
              }
            }
          }

          env {
            name = "DB_USER"
            value_from {
              config_map_key_ref {
                name = kubernetes_config_map.fraud_demo_config.metadata[0].name
                key  = "DB_USER"
              }
            }
          }

          env {
            name = "DB_HOST"
            value_from {
              config_map_key_ref {
                name = kubernetes_config_map.fraud_demo_config.metadata[0].name
                key  = "DB_HOST"
              }
            }
          }

          env {
            name = "DB_PORT"
            value_from {
              config_map_key_ref {
                name = kubernetes_config_map.fraud_demo_config.metadata[0].name
                key  = "DB_PORT"
              }
            }
          }

          env {
            name = "DB_PASSWORD"
            value_from {
              config_map_key_ref {
                name = kubernetes_config_map.fraud_demo_config.metadata[0].name
                key  = "DB_PASSWORD"
              }
            }
          }

          env {
            name = "ADMIN_USER_USERNAME"
            value_from {
              config_map_key_ref {
                name = kubernetes_config_map.fraud_demo_config.metadata[0].name
                key  = "ADMIN_USER_USERNAME"
              }
            }
          }

          env {
            name = "ADMIN_USER_EMAIL"
            value_from {
              config_map_key_ref {
                name = kubernetes_config_map.fraud_demo_config.metadata[0].name
                key  = "ADMIN_USER_EMAIL"
              }
            }
          }

          env {
            name = "ADMIN_USER_PASSWORD"
            value_from {
              config_map_key_ref {
                name = kubernetes_config_map.fraud_demo_config.metadata[0].name
                key  = "ADMIN_USER_PASSWORD"
              }
            }
          }
        }
      }
    }
  }
}

resource "kubernetes_service" "ui" {
  metadata {
    name = "fraud-demo-service"
  }

  spec {
    selector = {
      app = "${var.webapp_name}"
    }
    port {
      port        = 8000
      target_port = 80
    }
    type = "LoadBalancer"
  }
  depends_on = [kubernetes_deployment.fraud_demo]

}

output "application_url" {
  value = "https://${kubernetes_service.ui.status[0].load_balancer[0].ingress[0].hostname}"
}
